# cuda_interp

./: .gitignore  CMakeLists.txt  README.md  compile.sh  install.sh
examples/eg1/: README.md  eg1.ini  run.sh
src/: CMakeLists.txt  config.cpp  config.h  data.cpp  data.h  kernels.cu  kernels.h  main.cu  types.h
